# zeroclaw-migration-bundle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MIGRATION_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PRIORITY_IMPLEMENTATION_REPORT.md  README.md  TELEGRAM_IMPLEMENTATION_ANALYSIS.md  TELEGRAM_IMPLEMENTATION_ROADMAP.md  TELEGRAM_SUMMARY.md  TEST_RESULTS.md  V0_4_0_MIGRATION_REPORT.md  package.json
backend/: .env.openwebui.example  .webui_secret_key  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PER_CONVERSATION_SKILLS_FIX.md  README.md  TELEGRAM_IMPLEMENTATION_PROGRESS.md  TELEGRAM_TEST_REPORT.md  TELEGRAM_USER_WHITELIST.md  TRIAD_SETUP_GUIDE.md  package-lock.json  package.json  playwright.config.js  test_dashboard_pages.js  test_each_page.js  test_hands_chat.js  test_hands_chat_nocache.js  test_pages_fixed.js  test_pages_independent.js  test_quick_login.spec.js  web-workspace
backend/.serena/: project.yml
backend/config/: config.toml
backend/config/caddy/: open-webui.caddyfile
backend/crates/quota-tracker/: Cargo.toml
backend/crates/quota-tracker/src/: lib.rs  provider.rs  schema.rs  state.rs  tracker.rs
backend/crates/quota-tracker/tests/: integration_test.rs
backend/crates/usage-logger/: Cargo.toml
backend/crates/usage-logger/src/: benchmark.rs  lib.rs  logger.rs  metrics.rs  schema.rs
backend/docs/: AUDIT_ASYNC.md  AUDIT_REACT.md  DEEP_AUDIT_AND_TESTS_2026.md  MASTER_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  quota-tracking.md  smart-routing-guide.md
backend/docs/.archive/: DEEP_AUDIT_AND_TESTS_2026.md  security.md
backend/scripts/: bootstrap.sh  configure_open_webui.js  configure_ufw.sh  example_usage.sh  install_ollama.sh  start_open_webui.sh
backend/src/: diagnostic.rs  lib.rs  main.rs  util.rs
backend/src/agent/: a2a.rs  agent.rs  classifier.rs  hands.rs  ingress_tests.rs  interruption.rs  loop_.rs  memory_loader.rs  mod.rs  prompt.rs  tasks_section.rs  tests.rs  workspace.rs
backend/src/agent/loop_/: context.rs  execution.rs  parsing.rs  security.rs  streaming.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/channels/: cli.rs  dingtalk.rs  discord.rs  email_channel.rs  imessage.rs  irc.rs  lark.rs  linq.rs  matrix.rs  mattermost.rs  mod.rs  mod.rs.stub_backup  nextcloud_talk.rs  nostr.rs  qq.rs  signal.rs  slack.rs  telegram.rs  telegram_circuit_breaker.rs  telegram_inline_keyboard.rs  telegram_keyboard_ext.rs  telegram_menu_button.rs  telegram_patch.rs  traits.rs  wati.rs  whatsapp.rs  whatsapp_web.rs
backend/src/commands/: benchmark.rs  deploy.rs  metrics.rs  mod.rs  quota.rs
backend/src/config/: mod.rs  routing.rs  schema.rs
backend/src/config/schemas/: llm_schema.rs  memory_schema.rs  security_schema.rs
backend/src/cost/: tracker.rs
backend/src/cron/: mod.rs  scheduler.rs
backend/src/daemon/: mod.rs
backend/src/gateway/: api.rs  api_skills_fix.rs  mod.rs  openai_compat.rs  sse.rs  static_files.rs  telegram_threads.rs  telegram_webhook.rs  tma_auth.rs  ws.rs
backend/src/gateway/tests/: tui_api_tests.rs
backend/src/health/: mod.rs
backend/src/integrations/: registry.rs
backend/src/memory/: cpu.rs  embeddings.rs  hygiene.rs  lucid.rs  markdown.rs  mod.rs  none.rs  postgres.rs  qdrant.rs  response_cache.rs  snapshot.rs  sqlite.rs  tasks.rs  traits.rs  vector.rs
backend/src/monitoring/: cpu.rs  mod.rs
backend/src/onboard/: wizard.rs
backend/src/providers/: bedrock.rs  glm.rs  mod.rs  reliable.rs  traits.rs
backend/src/providers/common/: http_client.rs  mod.rs  sse_parser.rs
backend/src/routing/: classifier.rs  mod.rs  quota_aware.rs  rate_limiter.rs  router.rs  subagent.rs  usage_monitor.rs
backend/src/runtime/: docker.rs  firecracker.rs  mod.rs  native.rs  traits.rs  wasm.rs
backend/src/security/: estop.rs  otp.rs  pairing.rs
backend/src/skills/: engine.rs  evaluator.rs  loader.rs  mod.rs
backend/src/sop/: gates.rs  temp_persist.txt
backend/src/tools/: delegate.rs  examples.rs  macros.rs  mod.rs  model_routing_config.rs  registry.rs  schema_builder.rs  shell.rs  sop_list.rs  subagent_spawn.rs  task_plan.rs
backend/src/tunnel/: mod.rs
backend/storage/: raft_state.json
backend/storage/collections/zeroclaw_memories/0/: replica_state.json
backend/tests/: hand_lifecycle.rs  requirements-test.txt  routing-integration.rs
backend/tests/e2e/: SETUP.md  telegram_bot.py  telegram_bot_test.py
backend/tests/playwright/: E2E_TEST_FINAL_REPORT.md  E2E_TEST_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPEN_WEBUI_CONFIG_README.md  QUICK_START.md  TEST_SUMMARY.md  chat_test.spec.js  dashboard_pages.spec.js  dashboard_test.spec.js  debug_openwebui.js  mock_openwebui_test.js  open_webui_config.spec.js  open_webui_config.spec.ts  rigorous_e2e.spec.js  test_advanced_skills_engine.spec.js  test_quick_login.spec.js  test_simple_chat.spec.js
backend/tests/stress/: rag_limits.sh
backend/web/: TASK_33_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
backend/web/playwright-report/: index.html
backend/web/src/: App.tsx  main.tsx
backend/web/src/components/auth/: PairingDialog.tsx  index.ts
backend/web/src/components/chat/: SwarmChatter.tsx
backend/web/src/components/layout/: Header.tsx  Layout.tsx  RightPanel.tsx
backend/web/src/components/system/: ActiveHands.tsx  MetricCard.tsx
backend/web/src/contexts/: LocaleContext.tsx  index.ts
backend/web/src/examples/: InitialStateExample.tsx
backend/web/src/hooks/: README.md  useA2AStream.ts  useInitialHandState.ts  useWebSocket.ts
backend/web/src/lib/storage/: index.ts  (+2 more)
backend/web/src/pages/: AgentChat.tsx  Dashboard.tsx  TelegramHub.tsx
backend/web/src/stores/: index.ts  store.tsx
backend/web/src/types/: storage.ts  tasks.ts
backend/web/test-results/: .last-run.json
backend/web/test-results/manual-telegram-manual-telegram-testing---browser-stays-open-chromium/: error-context.md
backend/web/tests/e2e/: manual-telegram.spec.ts  telegram-connect.spec.ts  telegram-web.spec.ts  thread-skills.spec.ts  tma-hub.spec.ts  visual-tma-hub.spec.ts
(+127 files in other folders)
