[package]
name = "quota-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
log = "0.4"
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
