[package]
name = "quota-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["chrono", "bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
